# motley

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
.github/workflows/: benchmark.yml  ci.yml
assets/: ATTRIBUTION.md
assets/materials/: default.ron
assets/scenes/: example.scene.ron
benches/: performance.rs
crates/engine-assets/: Cargo.toml
crates/engine-assets/src/: hot_reload.rs  lib.rs  loaders.rs  pathing.rs  scene.rs
crates/engine-assets/tests/: path_resolution.rs  scene_roundtrip.rs
crates/engine-audio/: Cargo.toml
crates/engine-audio/src/: lib.rs  tests.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: camera.rs  camera_tests.rs  error.rs  hardening.rs  lib.rs  reflect.rs  schedule.rs  tag.rs  tag_tests.rs  tests.rs  time.rs  time_tests.rs  transform.rs  transform_tests.rs  window.rs  window_tests.rs
crates/engine-editor/: Cargo.toml
crates/engine-editor/src/: app.rs  app_tests.rs  commands.rs  commands_tests.rs  config.rs  inspector.rs  layout.rs  lib.rs  main.rs  selection.rs  viewport.rs
crates/engine-input/: Cargo.toml
crates/engine-input/src/: lib.rs  tests.rs
crates/engine-math/: Cargo.toml
crates/engine-math/src/: lib.rs
crates/engine-physics/: Cargo.toml
crates/engine-physics/src/: components.rs  components_tests.rs  lib.rs  mapping.rs  query.rs  reflect.rs  reflect_tests.rs  systems.rs  systems_tests.rs  world3d.rs  world3d_tests.rs
crates/engine-reflect/: Cargo.toml
crates/engine-reflect-derive/: Cargo.toml
crates/engine-reflect-derive/src/: lib.rs
crates/engine-reflect/src/: lib.rs
crates/engine-reflect/tests/: component_registry.rs
crates/engine-render/: Cargo.toml
crates/engine-render/src/: camera_uniforms.rs  camera_uniforms_tests.rs  draw.rs  draw_tests.rs  gpu_resources.rs  gpu_resources_tests.rs  lib.rs  pipelines.rs  scene_adapter.rs  scene_adapter_tests.rs  surface.rs  surface_tests.rs  texture_upload.rs  texture_upload_tests.rs
examples/sandbox/: Cargo.toml
examples/sandbox/src/: main.rs
scripts/: validate_benchmarks.rs
shaders/: fragment_shader.glsl  shader.wgsl  vertex_shader.glsl
src/: gui.rs  lib.rs  main.rs  model.rs  renderer.rs  texture.rs  utilities.rs  window.rs
src/gui/: camera.rs  components.rs  framebuffer.rs  menu.rs  mod.rs  window.rs
src/gui/optimization/: frustum.rs
src/handlers/: keyboard_handler.rs  mod.rs  mouse_handler.rs
src/model/: loader.rs  mod.rs
