[package]
name = "motley"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.24.0"
glam = "0.23.0"
gltf = "1.0.0"
stb_image = "0.2.4"
criterion = "0.5.1"
criterion-table = "0.4.2"
serde = "1.0.216"
serde_json = "1.0.133"
image = "0.25.5"
rayon = "1.7"
rusttype = "0.9"

[[bench]]
name = "performance"
harness = false