[package]
name = "engine-assets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bevy_ecs.workspace = true
engine-core = { path = "../engine-core" }
engine-reflect = { path = "../engine-reflect" }
gltf.workspace = true
image.workspace = true
log.workspace = true
notify.workspace = true
ron.workspace = true
serde.workspace = true

[dev-dependencies]
engine-physics = { path = "../engine-physics" }
