[package]
name = "engine-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bevy_ecs = { workspace = true, features = ["multi_threaded"] }
engine-math = { path = "../engine-math" }
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true
winit.workspace = true
