[package]
name = "engine-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bevy_ecs.workspace = true
engine-assets = { path = "../engine-assets" }
engine-core = { path = "../engine-core" }
engine-math = { path = "../engine-math" }
engine-physics = { path = "../engine-physics" }
engine-reflect = { path = "../engine-reflect" }

egui.workspace = true
eframe.workspace = true
egui_dock.workspace = true
rfd.workspace = true
dirs.workspace = true
serde.workspace = true
ron.workspace = true
bytemuck.workspace = true

log.workspace = true
env_logger.workspace = true
