[package]
name = "engine-input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bevy_ecs.workspace = true
engine-math = { path = "../engine-math" }
engine-core = { path = "../engine-core" }
gilrs.workspace = true
log.workspace = true
winit.workspace = true
