[package]
name = "engine-physics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bevy_ecs.workspace = true
engine-core = { path = "../engine-core" }
engine-math = { path = "../engine-math" }
log.workspace = true
rapier2d.workspace = true
rapier3d.workspace = true
