[package]
name = "engine-reflect"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bevy_ecs.workspace = true
bevy_reflect.workspace = true
engine-reflect-derive = { path = "../engine-reflect-derive" }

[dev-dependencies]
engine-math = { path = "../engine-math" }
