[package]
name = "sandbox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bevy_ecs.workspace = true
engine-assets = { path = "../../crates/engine-assets" }
engine-audio = { path = "../../crates/engine-audio" }
engine-core = { path = "../../crates/engine-core" }
engine-input = { path = "../../crates/engine-input" }
engine-math = { path = "../../crates/engine-math" }
engine-physics = { path = "../../crates/engine-physics" }
engine-render = { path = "../../crates/engine-render" }
log.workspace = true
